--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [data]
-kitId=0
+kitId=2
 
 ; [env:uno]
 ; platform = atmelavr
@@ -26,8 +26,9 @@ upload_protocol = espota
 upload_port = inindkit${data.kitId}.local
 monitor_port = socket://inindkit${data.kitId}.local:4000
 build_src_filter = +<esp1.cpp>
-lib_deps = 
+lib_deps =
 	adafruit/Adafruit SSD1306 @ ^2.5.7
 	wnatth3/WiFiManager@^2.0.16-rc.2
 	bblanchon/ArduinoJson@^7.0.4
 	tomasz90/ESP32-OTA-Serial@^1.0.6
+	yellobyte/DacESP32@^1.1.1
