--- a/platformio.ini
+++ b/platformio.ini
@@ -22,9 +22,9 @@ platform = espressif32
 board = az-delivery-devkit-v4
 monitor_speed = 115200
 framework = arduino	
-upload_protocol = espota
-upload_port = inindkit${data.kitId}.local
-monitor_port = socket://inindkit${data.kitId}.local:4000
+; upload_protocol = espota
+; upload_port = inindkit${data.kitId}.local
+; monitor_port = socket://inindkit${data.kitId}.local:4000
 build_src_filter = +<esp1.cpp>
 lib_deps =
 	adafruit/Adafruit SSD1306 @ ^2.5.7
