--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [data]
-kitId=0
+kitId=2
 
 ; [env:uno]
 ; platform = atmelavr
@@ -31,3 +31,4 @@ lib_deps =
 	wnatth3/WiFiManager@^2.0.16-rc.2
 	bblanchon/ArduinoJson@^7.0.4
 	tomasz90/ESP32-OTA-Serial@^1.0.6
+	yellobyte/DacESP32@^1.1.1
