--- a/platformio.ini
+++ b/platformio.ini
@@ -7,28 +7,22 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-[data]
-kitId=2
 
-; [env:uno]
-; platform = atmelavr
-; board = uno
-; framework = arduino
-; build_src_filter = +<uno3.cpp>
-; lib_deps = paulstoffregen/TimerOne@^1.1.1
+[data]
+kitid = 2
 
 [env:InIndKit]
 platform = espressif32
 board = az-delivery-devkit-v4
 monitor_speed = 115200
-framework = arduino	
+framework = arduino
 upload_protocol = espota
 upload_port = inindkit${data.kitId}.local
 monitor_port = socket://inindkit${data.kitId}.local:4000
 build_src_filter = +<esp1.cpp>
-lib_deps =
+lib_deps = 
 	adafruit/Adafruit SSD1306 @ ^2.5.7
 	wnatth3/WiFiManager@^2.0.16-rc.2
 	bblanchon/ArduinoJson@^7.0.4
-	tomasz90/ESP32-OTA-Serial@^1.0.6
 	yellobyte/DacESP32@^1.1.1
+	jandrassy/TelnetStream@^1.3.0
