--- a/platformio.ini
+++ b/platformio.ini
@@ -25,4 +25,4 @@ lib_deps =
 	wnatth3/WiFiManager@^2.0.16-rc.2
 	bblanchon/ArduinoJson@^7.0.4
 	yellobyte/DacESP32@^1.1.1
-	jandrassy/TelnetStream@^1.3.0
+	lennarthennigs/ESP Telnet@^2.2.1
