--- a/platformio.ini
+++ b/platformio.ini
@@ -11,18 +11,24 @@
 [data]
 kitid = 2
 
-[env:InIndKit]
-platform = espressif32
-board = az-delivery-devkit-v4
-monitor_speed = 115200
+[env:uno]
+platform = atmelavr
+board = uno
 framework = arduino
-upload_protocol = espota
-upload_port = inindkit${data.kitId}.local
-monitor_port = socket://inindkit${data.kitId}.local:4000
-build_src_filter = +<esp1.cpp>
-lib_deps = 
-	adafruit/Adafruit SSD1306 @ ^2.5.7
-	wnatth3/WiFiManager@^2.0.16-rc.2
-	bblanchon/ArduinoJson@^7.0.4
-	yellobyte/DacESP32@^1.1.1
-	lennarthennigs/ESP Telnet@^2.2.1
+build_src_filter = +<uno1.cpp>
+
+; [env:InIndKit]
+; platform = espressif32
+; board = az-delivery-devkit-v4
+; monitor_speed = 115200
+; framework = arduino
+; upload_protocol = espota
+; upload_port = inindkit${data.kitId}.local
+; monitor_port = socket://inindkit${data.kitId}.local:4000
+; build_src_filter = +<esp1.cpp>
+; lib_deps = 
+; 	adafruit/Adafruit SSD1306 @ ^2.5.7
+; 	wnatth3/WiFiManager@^2.0.16-rc.2
+; 	bblanchon/ArduinoJson@^7.0.4
+; 	yellobyte/DacESP32@^1.1.1
+; 	lennarthennigs/ESP Telnet@^2.2.1
